# IDP

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  build.sh  docker-compose.yml  integration_instructions.md  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  run_idpkit.py  run_server.py  verify_integration.md
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1771873767844.txt  Pasted-06-24-27-INFO-Using-model-gemini-gemini-3-flash-preview_1772174927023.txt  Pasted-2026-02-24-21-24-18-59-97f35e6f-User-INFO-34-29-31-77-0_1771948485081.txt  Pasted-2026-02-24T07-41-45Z-info-Deployment-8d59b362-1d2f-4e7b_1771919254242.txt  Pasted-2026-02-24T08-02-40Z-info-Deployment-8d59b362-1d2f-4e7b_1771921352618.txt  Pasted-2026-02-24T10-03-42Z-info-Deployment-bb0d4ad4-143a-4771_1771928425375.txt  Pasted-2026-02-24T15-35-46Z-info-Deployment-bb0d4ad4-143a-4771_1771947673372.txt  Pasted-2026-02-25T15-05-58Z-info-Deployment-bb0d4ad4-143a-4771_1772032333543.txt  Pasted-2026-02-27-00-46-22-81-02268b5e-System-healthcheck-fail_1772133732355.txt  Pasted-ERROR-Exception-in-ASGI-application-Traceback-most-rece_1772024239131.txt  Pasted-start-find-toc-pages-no-toc-found-process-no-toc-start-_1772024913139.txt
idpkit/: __init__.py
idpkit/agent/: __init__.py  agent.py  e2b_tools.py  memory.py  skill_library.py  skills.py  tools.py
idpkit/api/: __init__.py  app.py  deps.py
idpkit/batch/: __init__.py  formatter.py  runner.py
idpkit/core/: __init__.py  events.py  exceptions.py  llm.py  schemas.py  storage.py  web_search.py
idpkit/db/: __init__.py  models.py  seed.py  session.py
idpkit/engine/: __init__.py  auto_tagger.py  config.yaml  page_index.py  utils.py
idpkit/generation/: __init__.py  docx_generator.py  markdown_generator.py  templates.py
idpkit/graph/: __init__.py  builder.py  linker.py  models.py  networkx_ops.py  prompts.py  queries.py  schemas.py
idpkit/indexing/: __init__.py  base.py  docx_indexer.py  generic_indexer.py  html_indexer.py  markdown_indexer.py  pdf_indexer.py
idpkit/jobs/: __init__.py  manager.py
idpkit/parsing/: __init__.py  base.py  docx_parser.py  html_parser.py  image_parser.py  pdf_parser.py  pptx_parser.py  spreadsheet_parser.py  youtube_parser.py
idpkit/plugins/: __init__.py  manager.py
idpkit/processing/: __init__.py  comparison.py  conversion.py  extraction.py  (+2 more)
pageindex/: __init__.py  page_index.py  page_index_md.py  utils.py
(+61 files in other folders)
